Made the header and footer "fixed" so you always see them when you scroll

--- a/OneStopFitness/WebContent/css/main.css
+++ b/OneStopFitness/WebContent/css/main.css
@@ -1,3 +1,5 @@
+body { padding-top: 70px; }
+
 footer {
 	position: absolute;
     left: 0;
@@ -6,6 +8,22 @@ footer {
     width: 100%;
     text-align: center;
     color: #938C8C;
+}
+
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -142px; 
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.site-footer, .page-wrap:after {
+  height: 100px; 
+}
+.site-footer {
+  background: #00001c!important;
 }
 
 
@@ -93,7 +111,7 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 .social-circle a {
- background-color: #D3D3D3;   
+ background-color: #938C8C;   
 }
 
 .callout-light {
@@ -163,6 +181,16 @@ h4 {
 .callout-block h4 {
 	font-weight: 300;
 	line-height: 1.4;
+}
+
+/* For the footer */
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
 }
 
     
