Inital user login functionality added

--- a/OneStopFitness/WebContent/css/main.css
+++ b/OneStopFitness/WebContent/css/main.css
@@ -268,4 +268,9 @@ h4 {
 .login-help{
   font-size: 12px;
 }   
+
+.navbar-nav>li>a.profile-image {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
     
