--- a/OneStopFitness/.settings/org.eclipse.wst.common.component
+++ b/OneStopFitness/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="OneStopFitness">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="context-root" value="OneStopFitness"/>
         <property name="java-output-path" value="/OneStopFitness/build/classes"/>
     </wb-module>
